created data service using resource

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <script src="./app/app.js"></script>
     
     <!-- Domain Classes -->
-
+     <script src="./app/tips/tip.js"></script>
     <!-- Services -->
-
+     <script src="./app/common/services/common.services.js"></script>
+     <script src="./app/common/services/cdataAccessService.js"></script>
     <!-- Controllers -->
     <script src="./app/tips/tipListCtrl.js"></script>
 </body>
