add service to controller

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- Services -->
      <script src="./app/common/services/common.services.js"></script>
      <script src="./app/common/services/dataAccessService.js"></script>
+     <script src="./app/common/services/tipResourceMock.js"></script>
     <!-- Controllers -->
     <script src="./app/tips/tipListCtrl.js"></script>
 </body>
